[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-envs"
version = "0.1.0"
description = "Spawn-fluid JAX MARL grid environments with variable agent populations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shishir Sharma" }]
dependencies = [
    "jax>=0.4.30",
    "flax>=0.8",
    "chex>=0.1.85",
    "numpy>=1.24",
    "pillow>=9.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["fluid_envs*"]

[tool.setuptools.package-data]
fluid_envs = ["assets/lbf/*.png"]
